1.13 - YYYY.MM.DD
 * Bug Fixes:
   * FLAC: Raise IOError, instead of UnboundLocalError, when trying
     to open a non-existant file. (Lukáš Lalinský)

1.12 - 2007.08.04
 * Write important ID3v2 frames near the start. (Lukáš Lalinský)
 * Clean up distutils functions.

1.11 - 2007.04.26
 * New Features:
   * mid3v2 can now set URL frames. (Vladislav Naumov)
   * Musepack: Skip ID3v2 tags. (Lukáš Lalinský)
 * Bug Fixes:
   * mid3iconv: Skip all timestamp frames. (Lukáš Lalinský)
   * WavPack: More accurate length calculation. ('ak')
   * PairedTextFrame: Fix typo in documentation. (Lukáš Lalinský)
   * ID3: Fixed incorrect TDAT conversion. The format is DDMM, not
     MMDD. (Lukáš Lalinský)
 * API:
   * Metadata no longer inherits from dict.
   * Relatedly, the MRO has changed on several types.
   * More documentation for MP4 atoms. (Lukáš Lalinský)
   * Prefer MP3 for files with unknown extensions and ID3 tags.

1.10.1 - 2007.01.23
 * Bug Fixes:
   * Documentation mentions ASF support.
   * APEv2 flags and valid keys are fixed.
   * Tests pass on Python 2.3 again.

1.10 - 2007.01.21
 * New Features:
   * FLAC: Skip ID3 tags. Added option to delete them on save.
   * EncodedTextSpec: Make private members more private.
   * Corrupted Oggs generated by GStreamer (e.g. Sound Juicer) can be read.
   * FileTypes have a .mime attribute which is a list of likely MIME types
     for the file.
   * ASF (WMA/WMV) support.
 * Bug Fixes:
   * ID3: Fixed reading of v2.3 tags with unsynchronized data.
   * ID3: The data length indicator for compressed tags is written
     as a synch-safe integer.

1.9 - 2006.12.09
 * New Features:
   * OptimFROG support.
   * New mutagen.mp4 module with support for multiple data fields per atom
     and more compatible tag saving implementation.
   * Support for embedded pictures in FLAC files (new in FLAC 1.1.3).
 * mutagen.m4a is deprecated in favor of mutagen.mp4.

1.8 - 2006.10.02
 * New Features: